--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,8 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  color: #FDFDFD;
+  border: none;
   transition: 0.4s;
 }
 #powerSuperscript {
