--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,3 @@
-/* DISABLE TEXT HIGHLIGHT */
-.noSelect {
-  user-select: none; /* For Chrome and Opera */
-  -ms-user-select: none; /* For Internet Edge and Explorer*/
-  -webkit-user-select: none; /* For Safari */
-  -moz-user-select: none; /* For Firefox */
-  -khtml-user-select: none; /* Konqueror HTML */
-}
-
 body {
   background-color: #1F1F33;
   font-family: 'Lexend Tera', sans-serif;
@@ -38,6 +29,14 @@ main {
   font-size: 25px;
 }
 
+/* DISABLE BUTTONS HIGHLIGHT */
+button {
+  user-select: none; /* For Chrome and Opera */
+  -ms-user-select: none; /* For Internet Edge and Explorer*/
+  -webkit-user-select: none; /* For Safari */
+  -moz-user-select: none; /* For Firefox */
+  -khtml-user-select: none; /* Konqueror HTML */
+}
 button:focus {
   outline: 1px solid #FDFDFD;
 }
